<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#ffff7f1a"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_name"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="60dp">

        <RadioButton
            android:id="@+id/positive_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive_choice" />

        <RadioButton
            android:id="@+id/negative_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative_choice" />

        <RadioButton
            android:id="@+id/maybe_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maybe_choice" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_button"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radio_group_id"
        android:text="@string/check_button_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_button"
        android:id="@+id/answer_view"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
